Fix back button on mobile

--- a/resources/sass/frontend/_internship.scss
+++ b/resources/sass/frontend/_internship.scss
@@ -106,7 +106,11 @@
 
       @include text-usual(14px, $violet, left);
       margin-bottom: 38px;
-      margin-top: -60px;
+      margin-top: -20px;
+
+      @include for-desktop-up() {
+        margin-top: -60px;
+      }
 
       position: relative;
       padding-left: 16px;
