--- a/resources/sass/frontend/_volunteering.scss
+++ b/resources/sass/frontend/_volunteering.scss
@@ -98,15 +98,18 @@
 
     .back-link {
 
-      display: none;
 
-      @include for-desktop-up() {
+
         display: block;
-      }
+
 
       @include text-usual(14px, $violet, left);
       margin-bottom: 38px;
-      margin-top: -60px;
+      margin-top: -20px;
+
+      @include for-desktop-up() {
+        margin-top: -60px;
+      }
 
       position: relative;
       padding-left: 16px;
